--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -21,11 +21,21 @@ body.home {
 
       // Article list styling
       .category ul {
-        margin-top: (@base-font-size * @base-line-height);
+        margin-top: 0;
 
         li {
           margin-bottom: (@base-font-size * @base-line-height);
         }
+      }
+
+      // Article icon styling
+      .hentry {
+        padding-left: 20px;
+      }
+      .hentry .entry-icon {
+        margin-left: -20px;
+        margin-right: 5px;
+        width: 20px;
       }
 
       // Article header styling
