--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -30,12 +30,16 @@ body.home {
 
       // Article icon styling
       .hentry {
-        padding-left: 20px;
+        padding-left: 34px;
       }
       .hentry .entry-icon {
-        margin-left: -20px;
-        margin-right: 5px;
-        width: 20px;
+        font-size: @h6;
+        vertical-align: middle;
+
+        display: inline-block;
+        margin-left: -34px;
+        margin-right: 4px;
+        width: 26px;
       }
 
       // Article header styling
