small icon tweak

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -37,6 +37,7 @@ body.home {
         vertical-align: middle;
 
         display: inline-block;
+        margin-top: -3px;
         margin-left: -34px;
         margin-right: 4px;
         width: 26px;
