implemented search form

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -157,6 +157,11 @@ a:focus {
     }
   }
 
+  // Search form
+  #searchsubmit {
+    display: none;
+  }
+
   // Spacing
   .title,
   .description {
