--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -7906,6 +7906,9 @@ a:focus {
     display: none;
   }
 }
+.banner #searchsubmit {
+  display: none;
+}
 .banner .title,
 .banner .description {
   margin-top: 17.234px;
