implemented menu items for post formats

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -232,6 +232,12 @@ a:focus {
       }
     }
   }
+  // Default
+  & > li {
+    &:after {
+      background-color: @deep-sea;
+    }
+  }
   // About (thulme)
   & > li[class*='about'] {
     &:after {
