smaller input border radius on search

--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/modules/input.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/modules/input.less
@@ -412,7 +412,7 @@ input.search-query {
   padding-right: 6px;
   padding-left: 6px;
   margin-bottom: 0; // Remove the default margin on all inputs
-  .border-radius(15px);
+  .border-radius(@input-border-radius);
 }
 
 /* Allow for input prepend/append in search forms */
@@ -499,7 +499,7 @@ input.search-query {
     &.large {
       .border-radius(25px 0 0 25px);
       padding-right: 6px;
-    
+
       & + .btn-large {
         line-height: 22px;
         .border-radius(0 25px 25px 0);
@@ -509,20 +509,20 @@ input.search-query {
     &.small {
       text-indent: 7px;
       padding-right: 4px;
-      
+
       & + .btn-small {
         line-height: 16px;
         padding: 6px 8px 8px 4px;
       }
-    }  
+    }
   }
-  
+
   // Prepend
   .input-prepend .search-query.search-query-rounded {
     .border-radius(0 20px 20px 0);
     text-indent: 0;
     padding-left: 4px;
-    
+
     &.huge {
       .border-radius(0 27px 27px 0);
       padding-left: 5px;
@@ -535,7 +535,7 @@ input.search-query {
     .border-radius(20px 0 0 20px);
     padding-right: 4px;
     padding-left: 12px;
-    
+
     &.btn-huge {
       line-height: 30px;
       .border-radius(27px 0 0 27px);
@@ -553,7 +553,7 @@ input.search-query {
       padding: 6px 4px 8px 8px;
     }
   }
-  
+
   // Focus states
   .control-group.focus {
    .btn {
@@ -561,7 +561,7 @@ input.search-query {
       background-color: white;
       color: @firm;
     }
-  } 
+  }
 }
 
 
