home page more links

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -39,6 +39,20 @@ body.home {
         width: 20px;
       }
 
+      // More-links
+      .more {
+        padding-left: 29px;
+      }
+      .category-open-design .more a {
+        color: @open-design;
+      }
+      .category-startup-tools .more a {
+        color: @startup-tools;
+      }
+      .category-weiji .more a {
+        color: @weiji;
+      }
+
       // Article header styling
       .category-name {
         // Align with site title
