--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -158,6 +158,9 @@ a:focus {
   }
 
   // Search form
+  #searchform {
+    margin-bottom: (2 * @base-font-size * @base-line-height);
+  }
   #searchsubmit {
     display: none;
   }
