expanded grid system with one column

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -3,20 +3,18 @@ body.home {
   // Extra wide document container
   @media (min-width: @tabletBreakpoint) {
     .document {
-      .column(17);
+      .column(18);
       margin-top: (3 * @base-font-size * @base-line-height);
 
       .grid-container {
-        .row(17);
+        .row(18);
       }
 
       // Three-col grid
       .category-open-design,
-      .category-startup-tools {
-        .column(6, 17);
-      }
+      .category-startup-tools,
       .category-weiji {
-        .column(5, 17);
+        .column(6, 18);
       }
 
       // Article list styling
