implemented twitter widget pro + looper

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -1,3 +1,7 @@
+//
+// Special styles for the home page
+// --------------------------------------------------
+
 body.home {
 
   // Extra wide document container
