--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -7596,6 +7596,240 @@ a .icon-flip-vertical:before {
 .icon-renren:before {
   content: "\f18b";
 }
+.looper {
+  position: relative;
+  z-index: 1;
+  line-height: 1;
+  width: auto;
+  height: auto;
+}
+.looper .looper-inner {
+  overflow: hidden;
+  width: 100%;
+  height: auto;
+  position: relative;
+  z-index: 2;
+}
+.looper .item {
+  display: none;
+  position: relative;
+  z-index: 3;
+}
+.looper .item.active,
+.looper .item.next,
+.looper .item.prev {
+  display: block;
+}
+.looper .item.active {
+  top: 0;
+  left: 0;
+  z-index: 4;
+}
+.looper .item > img {
+  display: block;
+  line-height: 1;
+}
+.looper.xfade .looper-inner {
+  height: 100%;
+}
+.looper.xfade .item {
+  -webkit-transition: 0.5s ease-in opacity;
+  -moz-transition: 0.5s ease-in opacity;
+  -o-transition: 0.5s ease-in opacity;
+  transition: 0.5s ease-in opacity;
+  position: absolute;
+  width: 100%;
+  opacity: 0;
+}
+.looper.xfade .item.go {
+  opacity: 1;
+}
+.looper.xfade .item.active {
+  opacity: 1;
+}
+.looper.xfade .item.active.go {
+  opacity: 0;
+}
+.looper.slide.xfade .item {
+  -webkit-transition: 0.5s ease-in-out left, 0.5s ease-in opacity;
+  -moz-transition: 0.5s ease-in-out left, 0.5s ease-in opacity;
+  -o-transition: 0.5s ease-in-out left, 0.5s ease-in opacity;
+  transition: 0.5s ease-in-out left, 0.5s ease-in opacity;
+}
+.looper.slide .item {
+  -webkit-transition: 0.5s ease-in-out left;
+  -moz-transition: 0.5s ease-in-out left;
+  -o-transition: 0.5s ease-in-out left;
+  transition: 0.5s ease-in-out left;
+}
+.looper.slide .item.next,
+.looper.slide .item.prev {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.looper.slide .item.next {
+  left: 100%;
+}
+.looper.slide .item.prev {
+  left: -100%;
+}
+.looper.slide .item.active.prev,
+.looper.slide .item.active.next {
+  position: relative;
+  left: 0;
+}
+.looper.slide .item.go {
+  left: 0;
+}
+.looper.slide .item.go.active {
+  left: -100%;
+}
+.looper.slide .item.go.active.prev {
+  left: 100%;
+}
+.looper.slide.right .item.next {
+  left: -100%;
+}
+.looper.slide.right .item.prev {
+  left: 100%;
+}
+.looper.slide.right .item.go {
+  left: 0;
+}
+.looper.slide.right .item.go.active {
+  left: 100%;
+}
+.looper.slide.right .item.go.active.prev {
+  left: -100%;
+}
+.looper.slide.down .looper-inner {
+  height: 100%;
+}
+.looper.slide.down .item {
+  -webkit-transition: 0.5s ease-in-out top;
+  -moz-transition: 0.5s ease-in-out top;
+  -o-transition: 0.5s ease-in-out top;
+  transition: 0.5s ease-in-out top;
+}
+.looper.slide.down .item.next,
+.looper.slide.down .item.prev {
+  left: 0;
+}
+.looper.slide.down .item.next {
+  top: -100%;
+}
+.looper.slide.down .item.prev {
+  top: 100%;
+}
+.looper.slide.down .item.go {
+  top: 0;
+}
+.looper.slide.down .item.go.active {
+  top: 100%;
+  left: 0;
+}
+.looper.slide.down .item.go.active.prev {
+  top: -100%;
+}
+.looper.slide.down.xfade .item {
+  -webkit-transition: 0.5s ease-in-out top, 0.5s ease-in opacity;
+  -moz-transition: 0.5s ease-in-out top, 0.5s ease-in opacity;
+  -o-transition: 0.5s ease-in-out top, 0.5s ease-in opacity;
+  transition: 0.5s ease-in-out top, 0.5s ease-in opacity;
+}
+.looper.slide.up .looper-inner {
+  height: 100%;
+}
+.looper.slide.up .item {
+  -webkit-transition: 0.5s ease-in-out top;
+  -moz-transition: 0.5s ease-in-out top;
+  -o-transition: 0.5s ease-in-out top;
+  transition: 0.5s ease-in-out top;
+}
+.looper.slide.up .item.next,
+.looper.slide.up .item.prev {
+  left: 0;
+}
+.looper.slide.up .item.next {
+  top: 100%;
+}
+.looper.slide.up .item.prev {
+  top: -100%;
+}
+.looper.slide.up .item.go {
+  top: 0;
+}
+.looper.slide.up .item.go.active {
+  top: -100%;
+  left: 0;
+}
+.looper.slide.up .item.go.active.prev {
+  top: 100%;
+}
+.looper.slide.up.xfade .item {
+  -webkit-transition: 0.5s ease-in-out top, 0.5s ease-in opacity;
+  -moz-transition: 0.5s ease-in-out top, 0.5s ease-in opacity;
+  -o-transition: 0.5s ease-in-out top, 0.5s ease-in opacity;
+  transition: 0.5s ease-in-out top, 0.5s ease-in opacity;
+}
+.looper-control {
+  position: absolute;
+  z-index: 5;
+  top: 50%;
+  left: -20px;
+  width: 40px;
+  height: 40px;
+  margin-top: -20px;
+  font-size: 30px;
+  line-height: 40px;
+  color: #ffffff;
+  text-align: center;
+  cursor: pointer;
+  background: #333333;
+  border: 3px solid #ffffff;
+  -webkit-border-radius: 23px;
+  -moz-border-radius: 23px;
+  border-radius: 23px;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  -webkit-transition: none;
+  -moz-transition: none;
+  -o-transition: none;
+  transition: none;
+}
+.looper-control.right {
+  left: auto;
+  right: -20px;
+}
+.looper-control:hover {
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: none;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+}
+.looper-nav {
+  background: transparent;
+  text-align: center;
+  list-style-type: none;
+  margin: 0;
+}
+.looper-nav > li {
+  display: inline-block;
+  font-size: 36px;
+}
+.looper-nav > li a {
+  color: #049cdb;
+}
+.looper-nav > li a:hover {
+  color: #036690;
+}
+.looper-nav > li.active a,
+.looper-nav > li.active a:hover {
+  color: #036690;
+}
 .hide-text {
   font: 0/0 a;
   color: transparent;
@@ -7800,6 +8034,76 @@ body.archive .document .hentry header h2 {
     color: #d13351;
   }
 }
+.content-info .twitter-feed {
+  margin-top: 51.702000000000005px;
+}
+.content-info .widget_twitter {
+  background-color: #2e2d33;
+  color: #fcfffc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  display: none;
+}
+.content-info .widget_twitter > div {
+  display: block;
+  width: 101.08695652173914%;
+  margin: 0 -0.5434782608695652%;
+  *zoom: 1;
+}
+.content-info .widget_twitter > div:before,
+.content-info .widget_twitter > div:after {
+  display: table;
+  content: "";
+}
+.content-info .widget_twitter > div:after {
+  clear: both;
+}
+.content-info .widget_twitter .widgettitle {
+  display: inline;
+  float: left;
+  width: 7.000000000000001%;
+  margin: 0 0.5%;
+  margin-top: 8px;
+  padding-left: 10px;
+}
+.content-info .widget_twitter .looper {
+  display: inline;
+  float: left;
+  width: 83%;
+  margin: 0 0.5%;
+  margin-left: 4.5%;
+}
+.content-info .widget_twitter .looper-inner {
+  margin: 0;
+}
+.content-info .widget_twitter .follow-button,
+.content-info .widget_twitter .entry-meta,
+.content-info .widget_twitter .intent-meta {
+  display: none;
+}
+.content-info .widget_twitter .widgettitle {
+  font-size: 23.996px;
+  font-family: 'Knockout 31 A', 'Knockout 31 B', sans-serif;
+  font-weight: 400;
+}
+.content-info .widget_twitter .item {
+  min-height: 40px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+.content-info .widget_twitter .item .entry-content {
+  display: table-cell;
+  vertical-align: middle;
+  height: 40px;
+}
+.content-info .widget_twitter a {
+  color: white;
+}
+.content-info .widget_twitter a:hover,
+.content-info .widget_twitter a:focus {
+  text-decoration: underline;
+}
 @media (min-width: 979px) {
   body {
     max-width: 1468.5px;
@@ -7808,7 +8112,8 @@ body.archive .document .hentry header h2 {
   }
 }
 .banner,
-.document {
+.document,
+.content-info {
   display: inline;
   float: left;
   width: 91%;
@@ -8025,10 +8330,4 @@ a:focus {
 }
 .nav-list > li[class*='open-design']:after {
   background-color: #ebc434;
-}
-/*
- * Footer (content info)
- */
-.content-info {
-  border-top: 1px solid #bdc3c7;
 }
