more twitter widget and looper

--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -8036,6 +8036,7 @@ body.archive .document .hentry header h2 {
 }
 .content-info .twitter-feed {
   margin-top: 51.702000000000005px;
+  margin-top: 34.468px;
 }
 .content-info .widget_twitter {
   background-color: #2e2d33;
