--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -21,6 +21,7 @@
 @import "partials/document";
 @import "partials/home";
 @import "partials/footer";
+@import "partials/comments";
 
 // Basic responsive grid
 body {
