--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -75,13 +75,14 @@
 @alt-font-weight: 400;
 
 // Headings
-@h1: @base-font-size * 4.429;   /* 62px */
-@h2: @base-font-size * 3.714;   /* 52px */
-@h3: @base-font-size * 2.857;   /* 40px */
-@h4: @base-font-size * 2.071;   /* 29px */
-@h5: @base-font-size * 2;       /* 28px */
-@h6: @base-font-size * 1.714;   /* 24px */
-@p:  @base-font-size * 1.1429;  /* 16px */
+@h1:      @base-font-size * 4.429;   /* 62px */
+@h2:      @base-font-size * 3.714;   /* 52px */
+@h3:      @base-font-size * 2.857;   /* 40px */
+@h4:      @base-font-size * 2.071;   /* 29px */
+@h5:      @base-font-size * 2;       /* 28px */
+@h6:      @base-font-size * 1.714;   /* 24px */
+@p:       @base-font-size * 1.1429;  /* 16px */
+@small:   @base-font-size * 0.8571;  /* 12px */
 
 // Icons
 @icon-normal: 16px;
