--- a/wordpress/wp-content/themes/thulme/assets/less/partials/footer.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/footer.less
@@ -5,8 +5,8 @@
 .content-info {
 
   .twitter-feed {
-    margin-top: (3 * @base-font-size * @base-line-height);
-    margin-top: (2 * @base-font-size * @base-line-height);
+    margin-top: (4 * @base-font-size * @base-line-height);
+    margin-bottom: (3 * @base-font-size * @base-line-height);
   }
 
   .widget_twitter {
