--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -8056,8 +8056,8 @@ body.archive .document .hentry header h2 {
   }
 }
 .content-info .twitter-feed {
-  margin-top: 51.702000000000005px;
-  margin-top: 34.468px;
+  margin-top: 68.936px;
+  margin-bottom: 51.702000000000005px;
 }
 .content-info .widget_twitter {
   background-color: #2e2d33;
