social links in footer

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/footer.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/footer.less
@@ -4,9 +4,11 @@
 
 .content-info {
 
-  .twitter-feed {
-    margin-top: (4 * @base-font-size * @base-line-height);
-    margin-bottom: (3 * @base-font-size * @base-line-height);
+  padding-bottom: (3 * @base-font-size * @base-line-height);
+  padding-top: (4 * @base-font-size * @base-line-height);
+
+  section {
+    margin-bottom: (@base-font-size * @base-line-height);
   }
 
   .widget_twitter {
