social links moved to header

--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -94,9 +94,10 @@
 @social-pinterest:   #cb2028;
 @social-linkedin:    #0072b5;
 @social-stumbleupon: #ed4a13;
-@social-googleplus:  #2d2d2d;
+@social-googleplus:  #e5473e;
 @social-facebook:    #2f4b93;
 @social-twitter:     #00bdef;
+@social-instagram:   #aa7e63;
 
 // Tables
 @table-bg-active: lighten(@base, 69.4%);
