--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -282,3 +282,26 @@ a:focus {
   }
 
 }
+
+/*
+ * Social icons
+ */
+.banner {
+  .social-icons a {
+    margin-right: 1em;
+  }
+}
+
+// Social icon colors
+.icon-google-plus-sign {
+  color: @social-googleplus;
+}
+.icon-twitter {
+  color: @social-twitter;
+}
+.icon-linkedin {
+  color: @social-linkedin;
+}
+.icon-instagram {
+  color: @social-instagram;
+}
