kuler link in comments

--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -38,6 +38,9 @@
 @concrete:      #95a5a6;
 @asbestos:      #7f8c8d;
 
+
+// Tom's color scheme
+// https://kuler.adobe.com/thulme-com-color-theme-2664357/
 @stockholm:       #fcfffc;
 @deep-sea:        #2E2D33;
 @thulme:          #40E2E1;
