brand text rendering

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -76,7 +76,7 @@ a:focus {
     font-weight: @alt-font-weight;
     font-size: @h3;
     font-variant: small-caps;
-    letter-spacing: -1px;
+    text-rendering: auto;
 
     /* Striped pseudo-border */
     position: relative;
