lighter base color

--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -42,7 +42,7 @@
 // Tom's color scheme
 // https://kuler.adobe.com/thulme-com-color-theme-2664357/
 @stockholm:       #fcfffc;
-@deep-sea:        #2E2D33;
+@deep-sea:        #2c2b31;
 @thulme:          #40E2E1;
 @startup-tools:   #90CC3A;
 @open-design:     #EBC434;
