default font rendering

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -57,6 +57,12 @@ body {
   background-color: @stockholm;
 }
 
+// Font rendering
+body {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
+
 // Link highlighting
 a:hover,
 a:focus {
