updated color scheme

--- a/wordpress/wp-content/themes/thulme/assets/less/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/config.less
@@ -1,5 +1,19 @@
 
 //
+// Color Swatches
+// --------------------------------------------------
+
+// Tom's color scheme
+// https://kuler.adobe.com/thulme-com-color-theme-2664357/
+@stockholm:       #fcfffc;
+@deep-sea:        #32373C;
+@thulme:          #40E2E1;
+@startup-tools:   #90CC3A;
+@open-design:     #EBC434;
+@weiji:           #D13351;
+
+
+//
 // Responsive
 // --------------------------------------------------
 @tabletBreakpoint:      979px;
