bold links in article content

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/document.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/document.less
@@ -90,6 +90,11 @@
 
   .hentry {
 
+    // Inline links are bold
+    .entry-content a {
+      font-weight: bold;
+    }
+
     // Entry icons
     .entry-icon {
       color: @concrete;
