twitter widget link color

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/footer.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/footer.less
@@ -55,12 +55,10 @@
       }
     }
     a {
-      color: white;
-
-      &:hover,
-      &:focus {
-        text-decoration: underline;
-      }
+      color: @stockholm;
+    }
+    .looper a {
+      color: @social-twitter;
     }
 
     // Only show when javascript has been loaded
