--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -4,6 +4,23 @@
 
 body.home {
 
+  // Three-col grid
+  .category-open-design,
+  .category-startup-tools,
+  .category-weiji {
+    .column(18);
+  }
+
+  // Article list styling
+  .category ul {
+    margin-top: 0;
+    margin-bottom: (@base-font-size * @base-line-height);
+
+    li {
+      margin-bottom: (@base-font-size * @base-line-height);
+    }
+  }
+
   // Extra wide document container
   @media (min-width: @tabletBreakpoint) {
     .document {
@@ -19,15 +36,6 @@ body.home {
       .category-startup-tools,
       .category-weiji {
         .column(6, 18);
-      }
-
-      // Article list styling
-      .category ul {
-        margin-top: 0;
-
-        li {
-          margin-bottom: (@base-font-size * @base-line-height);
-        }
       }
 
       // Article icon styling
