logo size tweak

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/document.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/document.less
@@ -7,8 +7,9 @@
   // Enable absolutely positioned social bar
   position: relative;
 
+  // Vertically align with logo
   .content {
-    margin-top: (@base-font-size * @base-line-height);
+    margin-top: 3px;
   }
 
   // Alignment classes from Wordpress
