tighter line-height on cat descr on home page

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -43,6 +43,8 @@ body.home {
     border-bottom: 1px solid @clouds;
 
     margin-bottom: (2 * @base-font-size * @base-line-height);
+
+    font-size: @small;
   }
 
   // Colors for special categories
