--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -8005,6 +8005,7 @@ body.home .category-description {
   color: #95a5a6;
   border-bottom: 1px solid #ecf0f1;
   margin-bottom: 34.468px;
+  font-size: 11.9994px;
 }
 body.home .category-open-design .category-name {
   border-bottom: 3px solid #ebc434;
